--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -1,34 +1,20 @@
-<h1>Bot管理</h1>
+<div class="col-sm-8 col-sm-offset-2">
+<h1>Bot一覧</h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>アイコン</th>
-      <th>名前</th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @bots.each do |bot| %>
-      <tr>
-        <td><%= image_tag bot.image_url(:thumb) %></td>
-        <td><%= bot.name %></td>
-        <td>
-          <%= link_to 'チャットする', new_chats_path(bot.token), class: "btn btn-default" %>
-          <%= link_to "Botを育てる", new_bot_training_path(bot), class: 'btn btn-primary' %>
-          <%= link_to "学習データをエクスポート", bot_exports_path(bot), class: 'btn btn-default' %>
-          <%= link_to "学習データをインポート", new_bot_imports_path(bot), class: 'btn btn-default' %>
-          <%= link_to "学習を実行する", bot_learning_path(bot), method: :patch, class: 'btn btn-danger' %>
-          <%= link_to "編集する", edit_bot_path(bot), class: 'btn btn-default' %>
-          <%= link_to "対話履歴", bot_threads_path(bot), class: 'btn btn-default' %>
-          <%#= link_to "データインポート", new_bot_imports_path(bot), class: 'btn btn-default' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="row">
+  <% @bots.each do |bot| %>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
+        <%= image_tag bot.image_url(:thumb) %>
+        <div class="caption">
+          <h4><%= bot.name %></h4>
+          <!-- <p>...</p> -->
+          <%= link_to '詳細', edit_bot_path(bot), class: 'btn btn-primary btn-block' %>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
 <br>
-
 <%#= link_to '新規登録', new_bot_path, class: "btn btn-default" %>
