チャット画面はメニューが非表示なので、別タブで表示に変更

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <%= image_tag @bot.image_url(:thumb) %>
           <% end %>
         <% end %>
-        <%= link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item' %>
+        <%= link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank' %>
         <%= link_to "育てる", new_bot_training_path(@bot), class: 'list-group-item' %>
         <%= link_to "学習データをエクスポート", bot_exports_path(@bot), class: 'list-group-item' %>
         <%= link_to "学習データをインポート", new_bot_imports_path(@bot), class: 'list-group-item' %>
