アプリケーションのタイトルバーの表記をMy-opeに変更する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>My-ope - mofmof inc.</title>
+  <title>My-ope office - 社内問い合わせ専用AIチャットボット</title>
   <% assets = Rails.application.assets || ::Sprockets::Railtie.build_environment(Rails.application) %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'lumen', media: 'all' %>
