--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -8,7 +8,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to 'My-ope', admin_user_signed_in? ? dashboards_path : root_path, class: "navbar-brand" %>
+        <%= link_to 'My-ope office', admin_user_signed_in? ? dashboards_path : root_path, class: "navbar-brand" %>
       </div>
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
@@ -20,7 +20,7 @@
         </ul>
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Bot管理", bots_path %></li>
+            <li><%= link_to "Bot一覧", bots_path %></li>
             <li><%#= link_to "管理者画面", rails_admin_path %></li>
             <!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ&nbsp;<span class="caret"></span></a>
