--- a/app/views/bots/_form.html.erb
+++ b/app/views/bots/_form.html.erb
@@ -9,6 +9,7 @@
     <br />
   <% end %>
   <%= f.text_area :classify_failed_message, rows: 3 %>
+  <%= f.text_area :start_message, rows: 3 %>
 
   <hr />
 
@@ -21,6 +22,6 @@
   <% end %>
 
   <div class="actions">
-    <%= f.submit class: 'btn btn-primary' %>
+    <%= f.submit class: 'btn btn-success' %>
   </div>
 <% end %>
