--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -4,6 +4,7 @@
   <thead>
     <tr>
       <th>ID</th>
+      <th></th>
       <th>本文</th>
       <th nowrap="nowrap">最終発言日時</th>
       <th></th>
@@ -14,6 +15,11 @@
     <% @chats.each do |chat| %>
       <tr>
         <td><%= chat.id %></td>
+        <td>
+          <% if chat.has_answer_failed_message? %>
+            <i class="glyphicon glyphicon-warning-sign text-warning"></i>
+          <% end %>
+        </td>
         <td>
           <% messages = chat.messages.order('id desc') %>
           <%= '...<br />'.html_safe if messages.count > 3 %>
