javascriptファイルをcontrollerごとに自動読み込みする方式をやめる

--- a/app/views/bots/_form.html.erb
+++ b/app/views/bots/_form.html.erb
@@ -24,4 +24,5 @@
   <div class="actions">
     <%= f.submit class: 'btn btn-success' %>
   </div>
+  <%= javascript_include_tag 'bots/form' %>
 <% end %>
