--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -18,3 +18,5 @@
     <%#= link_to 'このスレッドを完了する', new_trainings_path, class: 'btn btn-primary' %>
   </div>
 <% end %>
+
+<%= javascript_include_tag 'trainings' %>
