--- a/app/views/trainings/show.html.erb
+++ b/app/views/trainings/show.html.erb
@@ -11,7 +11,7 @@
   <% end %>
 </div>
 
-<%= bootstrap_form_for [@bot, @training, @training.training_messages.build] do |f| %>
+<%= bootstrap_form_for @guest_training_message, url: bot_training_questions_path(@bot, @training) do |f| %>
   <div class="col-sm-10 col-sm-offset-2 col-xs-12 text-center comment-area">
     <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
     <%= f.submit '質問する', class: 'btn btn-default' %>
