--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -12,14 +12,8 @@
       <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
         <span id="last-message" />
       <% end %>
-      <%
-        url = if message.persisted?
-                replace_bot_training_answer_path(bot, message.training, message)
-              else
-                bot_training_answers_path(bot, message.training)
-              end
-       %>
-      <%= bootstrap_form_for message.answer || Answer.new, url: url, method: :post do |f| %>
+      <%#= bootstrap_form_for message.answer || Answer.new, url: bot_trainings_path(bot, message.training), method: :post do |f| %>
+      <%= bootstrap_form_for [bot, message.training, message] do |f| %>
         <div class="message-body-wrapper">
           <%= auto_link(simple_format(message.body, class: 'message-body'), html: { target: '_blank' }) %>
           <a href="javascript:void(0);"><i class="glyphicon glyphicon-pencil"></i></a>
