--- a/app/views/trainings/_decision_branch_fields.html.slim
+++ b/app/views/trainings/_decision_branch_fields.html.slim
@@ -1,17 +1,17 @@
 li.nested-fields.list-group-item data-decision-branch-id=decision_branch.id
-  a href='javascript:click_decision_branch(this);'
-    = form_tag new_bot_training_answer_path(bot, training), method: :get do |f|
-      = hidden_field_tag :decision_branch_id
-    = bootstrap_form_for [bot, training, answer, decision_branch], remote: true do |f|
-      .decision-branch-value
-        span.body = decision_branch.body
-        .decision-branch-buttons
-          - path = decision_branch.persisted? ? bot_training_answer_decision_branch_path(bot, training, answer, decision_branch) : 'javascript:void(0)'
-          / TODO onclickを使わないようにしたい
-          = link_to 'javascript:void(0)', class: 'btn btn-default', onclick: "swtich_to_text_field(this);" do 
-            span.glyphicon.glyphicon-pencil aria-hidden="true"
-          = link_to path, remote: true, method: :delete, class: 'btn btn-default', onclick: "destroy_decision_branch_field(event);" do 
-            span.glyphicon.glyphicon-remove aria-hidden="true"
-      - style = decision_branch.body.present? ? 'display:none;' : ''
-      .decision-branch-field style=style
-        = f.text_field :body, hide_label: true, onblur: 'switch_to_label(this);', onkeypress: 'enter_blur(event)'
+  / = form_tag choice_bot_training_answer_decision_branch(bot, training, answer decision_branch), method: :post do |f|
+  / a href='javascript:void(0);' onclick='click_decision_branch(this);'
+  = bootstrap_form_for [bot, training, answer, decision_branch], remote: true do |f|
+    .decision-branch-value
+      = link_to decision_branch.body, choice_bot_training_answer_decision_branch_path(bot, training, answer, decision_branch), method: :post
+      / span.body = decision_branch.body
+      .decision-branch-buttons
+        - path = decision_branch.persisted? ? bot_training_answer_decision_branch_path(bot, training, answer, decision_branch) : 'javascript:void(0)'
+        / TODO onclickを使わないようにしたい
+        = link_to 'javascript:void(0)', class: 'btn btn-default', onclick: "swtich_to_text_field(this);" do 
+          span.glyphicon.glyphicon-pencil aria-hidden="true"
+        = link_to path, remote: true, method: :delete, class: 'btn btn-default', onclick: "destroy_decision_branch_field(event);" do 
+          span.glyphicon.glyphicon-remove aria-hidden="true"
+    - style = decision_branch.body.present? ? 'display:none;' : ''
+    .decision-branch-field style=style
+      = f.text_field :body, hide_label: true, onblur: 'switch_to_label(this);', onkeypress: 'enter_blur(event)'
