--- a/app/views/answers/index.html.slim
+++ b/app/views/answers/index.html.slim
@@ -1,14 +1,18 @@
 h1 回答一覧
 
+
 table.table.table-striped
   thead
     tr
       th 本文
       th
   tbody
+    
     - @answers.each do |answer|
       tr
         td = simple_format answer.body
         td
           = link_to t('helpers.link.edit'), edit_bot_answer_path(@bot, answer), class: "btn btn-default"
           = link_to t('helpers.link.destroy'), bot_answer_path(@bot, answer), method: :delete, data: { confirm: '回答を削除します。宜しいですか。' }, class: "btn btn-danger"
+
+= paginate @answers
