アラートの閉じるボタン表示ズレ修正

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -68,6 +68,10 @@ body {
 //   z-index: 100;
 // }
 
+.alert.alert-dismissible .close {
+  right: 0px;
+}
+
 .list-group-item {
   position: relative;
   // cursor:pointer;
