--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -20,11 +20,13 @@
 
         <div class="message-body-edit hidden">
           <div class="form-group">
-            <%= f.autocomplete_text_area :body, autocomplete_answer_body_bot_trainings_path, placeholder: "回答を入力", class: 'form-control', rows: 4 %>
+            <%#= f.autocomplete_text_area :body, autocomplete_answer_body_bot_trainings_path, placeholder: "回答を入力", class: 'form-control', rows: 4 %>
+            <%= f.text_area :body, placeholder: "回答を入力", class: 'form-control', rows: 4, hide_label: true %>
           </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-          <%= f.submit 'この回答に差し替える', class: 'btn btn-success' %>
+          <%= f.submit '回答を差し替える', name: 'btn_replace', class: 'btn btn-success' %>
+          <%= f.submit '回答を更新する', name: 'btn_update', class: 'btn btn-success' %>
         </div>
 
         <% if message.try(:answer).try(:persisted?) %>
