--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -25,8 +25,11 @@
           </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
+
           <%= f.submit '回答を差し替える', name: 'btn_replace', class: 'btn btn-success' %>
-          <%= f.submit '回答を更新する', name: 'btn_update', class: 'btn btn-success' %>
+          <% if message.try(:answer).try(:persisted?) %>
+            <%= f.submit '回答を更新する', name: 'btn_update', class: 'btn btn-success' %>
+          <% end %>
         </div>
 
         <% if message.try(:answer).try(:persisted?) %>
@@ -36,7 +39,6 @@
             <% end %>
           </div>
         <% end %>
-
       <% end %>
     </div>
 
