--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -14,14 +14,19 @@
       <% end %>
       <%= bootstrap_form_for [bot, message.training, message] do |f| %>
         <div class="message-body-wrapper">
+          <p><%= message.try(:answer).try(:headline) %></p>
           <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
           <a href="javascript:void(0);"><i class="glyphicon glyphicon-pencil"></i></a>
         </div>
 
         <div class="message-body-edit hidden">
+          <%= f.fields_for :answer, message.try(:answer) || message.build_answer do |fa| %>
+            <%= fa.hidden_field :id %>
+            <%= fa.text_field :headline, placeholder: '見出し(任意)', hide_label: true %>
+          <% end %>
           <div class="form-group">
             <%#= f.autocomplete_text_area :body, autocomplete_answer_body_bot_trainings_path, placeholder: "回答を入力", class: 'form-control', rows: 4 %>
-            <%= f.text_area :body, placeholder: "回答を入力", class: 'form-control', rows: 4, hide_label: true %>
+            <%= f.text_area :body, placeholder: "回答を入力(必須)", class: 'form-control', rows: 4, hide_label: true %>
           </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
