--- a/app/views/answers/index.html.slim
+++ b/app/views/answers/index.html.slim
@@ -4,12 +4,14 @@ h1 回答一覧
 table.table.table-striped
   thead
     tr
+      th 見出し
       th 本文
       th
   tbody
     
     - @answers.each do |answer|
       tr
+        td = answer.headline
         td = simple_format answer.body
         td
           = link_to t('helpers.link.edit'), edit_bot_answer_path(@bot, answer), class: "btn btn-default"
