トレーニング画面に「回答失敗にする」を追加

--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -34,6 +34,7 @@
           <% if message.try(:answer).try(:persisted?) %>
             <%= f.submit '回答を更新する', name: 'btn_update', class: 'btn btn-success' %>
           <% end %>
+          <%= f.submit '回答失敗にする', name: 'btn_update_answer_failed', class: 'btn btn-success' %>
         </div>
 
         <% if message.try(:answer).try(:persisted?) %>
