インポート・エクスポートを一旦使えなくする

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,10 @@
         <% end %>
         <%= link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank' %>
         <%= link_to "育てる", new_bot_training_path(@bot), class: 'list-group-item' %>
-        <%= link_to "学習データをエクスポート", bot_exports_path(@bot), class: 'list-group-item' %>
-        <%= link_to "学習データをインポート", new_bot_imports_path(@bot), class: 'list-group-item' %>
+        <%= link_to "学習データをエクスポート", '#', class: 'list-group-item disabled' %>
+        <%= link_to "学習データをインポート", '#', class: 'list-group-item disabled' %>
+        <%#= link_to "学習データをエクスポート", bot_exports_path(@bot), class: 'list-group-item' %>
+        <%#= link_to "学習データをインポート", new_bot_imports_path(@bot), class: 'list-group-item' %>
         <%= link_to "対話履歴", bot_threads_path(@bot), class: 'list-group-item' %>
         <%= link_to "回答", bot_answers_path(@bot), class: 'list-group-item' %>
       </div>
