--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -19,22 +19,22 @@
         </div>
 
         <div class="message-body-edit hidden">
+          <div class="form-group">
+            <%= f.autocomplete_text_area :body, autocomplete_answer_body_bot_trainings_path, placeholder: "回答を入力", class: 'form-control', rows: 4 %>
+            <%#= f.text_area :body, placeholder: "回答を入力(必須)", class: 'form-control', rows: 4, hide_label: true %>
+          </div>
           <%= f.fields_for :answer, message.try(:answer) || message.build_answer do |fa| %>
             <%= fa.hidden_field :id %>
             <%= fa.text_field :headline, placeholder: '見出し(任意)', hide_label: true %>
           <% end %>
-          <div class="form-group">
-            <%#= f.autocomplete_text_area :body, autocomplete_answer_body_bot_trainings_path, placeholder: "回答を入力", class: 'form-control', rows: 4 %>
-            <%= f.text_area :body, placeholder: "回答を入力(必須)", class: 'form-control', rows: 4, hide_label: true %>
-          </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
 
           <%= f.submit '回答を差し替える', name: 'btn_replace', class: 'btn btn-success' %>
           <% if message.try(:answer).try(:persisted?) %>
-            <%= f.submit '回答を更新する', name: 'btn_update', class: 'btn btn-success' %>
+            <%= f.submit '回答を更新する', name: 'btn_update', class: 'btn btn-primary' %>
           <% end %>
-          <%= f.submit '回答失敗にする', name: 'btn_update_answer_failed', class: 'btn btn-success' %>
+          <%= f.submit '回答失敗にする', name: 'btn_update_answer_failed', class: 'btn btn-danger' %>
         </div>
 
         <% if message.try(:answer).try(:persisted?) %>
