--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,7 @@
         </ul>
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "ヘルプ", static_pages_help_path %></li>
             <li><%= link_to "Bot一覧", bots_path %></li>
             <li><%#= link_to "管理者画面", rails_admin_path %></li>
             <!--<li class="dropdown">
