戻るボタンのclassを変更

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,4 +1,4 @@
-<h1>対話履歴<small class="pull-right"><%= link_to '戻る', bot_threads_path(@bot, page: params[:index_page], filter: params[:filter]), class: 'btn btn-success' %></small></h1>
+<h1>対話履歴<small class="pull-right"><%= link_to '戻る', bot_threads_path(@bot, page: params[:index_page], filter: params[:filter]), class: 'btn btn-default' %></small></h1>
 
 <table class="table table-striped table-bordered">
   <thead>
