--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -213,6 +213,9 @@ body {
 // .navbar-bot-name {
 //   float: none;
 // }
+.bootstrap-tagsinput {
+  width: 100%;
+}
 
 /* スマホ横画面用 */
 @media screen and (max-width: 480px) {
