ステータス文言と変更時刻表示する

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,9 @@
           <% if @bot.image %>
             <%= image_tag @bot.image_url(:thumb) %>
           <% end %>
+          <% if @bot.learning_status.present? %>
+            <p><%= learning_status_label @bot %></p>
+          <% end %>
         <% end %>
         <%= link_to 'チャットする', new_chats_path(@bot.token), class: 'list-group-item', target: '_blank' %>
         <%= link_to "育てる", new_bot_training_path(@bot), class: 'list-group-item' %>
