--- a/app/views/word_mappings/edit.html.slim
+++ b/app/views/word_mappings/edit.html.slim
@@ -1,8 +1,3 @@
-h1 Editing word_mapping
+h1 同義語編集
 
 == render 'form'
-
-= link_to 'Show', @word_mapping
-'|
-= link_to 'Back', word_mappings_path
-
