--- a/app/views/word_mappings/_form.html.slim
+++ b/app/views/word_mappings/_form.html.slim
@@ -1,9 +1,11 @@
-= form_for @word_mapping do |f|
-  - if @word_mapping.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@word_mapping.errors.count, "error")} prohibited this word_mapping from being saved:"
-      ul
-        - @word_mapping.errors.full_messages.each do |message|
-          li = message
+.row
+  .col-md-6.col-xs-12
+    = bootstrap_form_for @word_mapping do |f|
+      = f.error_summary
+      
+      = f.text_field :word
+      = f.text_field :synonym
 
-  .actions = f.submit
+      .actions
+        = f.submit class: 'btn btn-primary'
+        = link_to '戻る', word_mappings_path, class: 'btn btn-default'
