--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -22,6 +22,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "ヘルプ", static_pages_help_path %></li>
             <li><%= link_to "Bot一覧", bots_path %></li>
+            <li><%= link_to "同義語一覧", word_mappings_path %></li>
             <li><%= link_to 'パスワード変更', edit_user_registration_path %></li>
             <li><%#= link_to "管理者画面", rails_admin_path %></li>
             <!--<li class="dropdown">
