--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,6 +8,7 @@
 // @import 'jquery-ui/theme.css';
 // @import 'jquery-ui/autocomplete.css';
 
+@import "common/variables";
 html {
   min-height: 100%;
 }
