--- a/app/views/answers/_tree_node.html.slim
+++ b/app/views/answers/_tree_node.html.slim
@@ -6,8 +6,11 @@ li.tree__node
     ol.tree
       - answer.decision_branches.each do |decision_branch|
         li.tree__node
-          .tree__item--no-children id="decision-branch-#{ decision_branch.id }"
+          div(
+            class="tree__item#{ '--no-children' if decision_branch.next_answer.blank? }"
+            id="decision-branch-#{ decision_branch.id }"
+          )
             .tree__item-body= decision_branch.body
-        /- if decision_branch.answer.present?
-          = render 'answers/tree_node', answer: decision_branch.answer
-      = render 'answers/tree_node_add'
+          - if decision_branch.next_answer.present?
+            ol.tree
+              = render 'answers/tree_node', answer: decision_branch.next_answer
