Create Tree component

--- a/app/views/answers/index.html.slim
+++ b/app/views/answers/index.html.slim
@@ -16,14 +16,15 @@
           = link_to t('helpers.link.destroy'), bot_answer_path(@bot, answer), method: :delete, data: { confirm: '回答を削除します。宜しいですか。' }, class: "btn btn-danger"
 /= paginate @answers
 
+
 .master-detail-panel
   .master-detail-panel__header
     h1.master-detail-panel__title 回答一覧
   .master-detail-panel__body
     .master-detail-panel__master
-      ol.tree
-        - @answers.each do |answer|
-          = render 'answers/tree_node', answer: answer
-        = render 'answers/tree_node_add'
+      span(
+        data-component="Tree"
+        data-answers=@answers.as_json_for_tree_component.to_json
+      )
 
     .master-detail-panel__detail
