--- a/app/views/static_pages/help.html.slim
+++ b/app/views/static_pages/help.html.slim
@@ -6,6 +6,7 @@ ul
   li = link_to 'Botの回答の削除について', 'https://esa-pages.io/p/sharing/3501/posts/146/caf4fb1867b57beeb80f.html'
   li = link_to '回答に選択肢を紐付ける', 'https://esa-pages.io/p/sharing/3501/posts/147/cb73c9c85c7dcfbba92d.html'
   li = link_to 'TIPS', 'https://esa-pages.io/p/sharing/3501/posts/148/da164283c816377c28a0.html'
+  li = link_to 'CSVによる一括データ投入方法', 'https://esa-pages.io/p/sharing/3501/posts/148/da164283c816377c28a0.html'
 
 br
 	
