--- a/app/views/answers/index.html.slim
+++ b/app/views/answers/index.html.slim
@@ -1,5 +1,5 @@
-/h1 回答一覧
-/table.table.table-striped
+h1 回答一覧 <small>#{ link_to 'コンソールはこちら', console_bot_answers_path(@bot) }</small>
+table.table.table-striped
   thead
     tr
       th 見出し
@@ -14,17 +14,4 @@
         td
           = link_to t('helpers.link.edit'), edit_bot_answer_path(@bot, answer), class: "btn btn-default"
           = link_to t('helpers.link.destroy'), bot_answer_path(@bot, answer), method: :delete, data: { confirm: '回答を削除します。宜しいですか。' }, class: "btn btn-danger"
-/= paginate @answers
-
-
-.master-detail-panel
-  .master-detail-panel__header
-    h1.master-detail-panel__title 回答一覧
-  .master-detail-panel__body
-    .master-detail-panel__master
-      span(
-        data-component="Tree"
-        data-answers=@answers.as_json_for_tree_component.to_json
-      )
-
-    .master-detail-panel__detail
+= paginate @answers
