Fix answers tree view route to conversation_tree#show

--- a/app/views/answers/index.html.slim
+++ b/app/views/answers/index.html.slim
@@ -1,4 +1,4 @@
-h1 回答一覧 <small>#{ link_to 'コンソールはこちら', console_bot_answers_path(@bot) }</small>
+h1 回答一覧
 table.table.table-striped
   thead
     tr
