--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -5,6 +5,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "devise_bootstrap_views";
+@import "font-awesome";
 // @import 'jquery-ui/core.css';
 // @import 'jquery-ui/theme.css';
 // @import 'jquery-ui/autocomplete.css';
@@ -244,4 +245,8 @@ body {
   padding-top: 100px;
   height: 100%;
   text-align: center;
+}
+
+.nav-pills li.hover-gray a:hover {
+  background-color: #eee;
 }
