--- a/app/views/learnings/update.js.erb
+++ b/app/views/learnings/update.js.erb
@@ -1,1 +1,2 @@
 $('#bot-status-label').html("<%= escape_javascript(render('shared/learning_status_label', bot: @bot)) %>");
+$('#bot-status-label').hide().fadeIn(1000);
