--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,10 +20,18 @@
         </ul>
         <% if user_signed_in? %>
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "ヘルプ", static_pages_help_path %></li>
-            <li><%= link_to "Bot一覧", bots_path %></li>
-            <li><%= link_to "同義語一覧", word_mappings_path %></li>
-            <li><%= link_to 'パスワード変更', edit_user_registration_path %></li>
+            <% if policy(:static_pages).help? %>
+              <li><%= link_to "ヘルプ", static_pages_help_path %></li>
+            <% end %>
+            <% if policy(:bot).index? %>
+              <li><%= link_to "Bot一覧", bots_path %></li>
+            <% end %>
+            <% if policy(:word_mapping).index? %>
+              <li><%= link_to "同義語一覧", word_mappings_path %></li>
+            <% end %>
+            <% if policy(:user).edit? %>
+              <li><%= link_to 'パスワード変更', edit_user_registration_path %></li>
+            <% end %>
             <li><%#= link_to "管理者画面", rails_admin_path %></li>
             <!--<li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">マスタ&nbsp;<span class="caret"></span></a>
