サポート先を西井さんに変更する

--- a/app/views/static_pages/help.html.slim
+++ b/app/views/static_pages/help.html.slim
@@ -12,11 +12,14 @@ br
 	
 h2 サポート連絡先
 
-p ※ 不具合情報や機能要望など、情報を求めておりますので、是非お気軽にお問い合わせください！
+p
+  | ※ 不具合情報や機能要望など、情報を求めておりますので、是非お気軽にお問い合わせください！
+  br
+  | ※ サポート体制整備中に付き、電話に出れないタイミングもあるため、なるべくメールでのお問い合わせをお願いいたします。お急ぎの際はお電話でも問題ありません。
 
 ul
   li 株式会社mofmof
-  li 原田 敦
-  li 080-5001-6198 (出れないタイミングもありますので、その際はメールいただければ折り返し致します。)
-  li a.harada@mof-mof.co.jp
+  li 西井
+  li 080-1397-5845
+  li sales@mof-mof.co.jp
   
