--- a/app/views/sentence_synonyms/index.html.slim
+++ b/app/views/sentence_synonyms/index.html.slim
@@ -6,14 +6,15 @@ table.table.table-striped
       th 同義文
   tbody
     - @training_messages.each do |tm|
-      tr
-        th= tm.id
-        th= tm.body
-        th
-          table.table.table-striped: tbody
-            - tm.sentence_synonyms.each do |ss|
-              tr
-                td= ss.id
-                td= ss.body
-                td= ss.created_user.email
-                th= link_to '削除', bot_sentence_synonym_path(@bot, ss), class: 'btn btn-danger', data: { confirm: '本当に削除してよろしいですか？', method: :delete }
+      - if current_user.normal? || policy_scope(tm.sentence_synonyms).any?
+        tr
+          th= tm.id
+          th= tm.body
+          th
+            table.table.table-striped: tbody
+              - policy_scope(tm.sentence_synonyms).each do |ss|
+                tr
+                  td= ss.id
+                  td= ss.body
+                  td= ss.created_user.email
+                  th= link_to '削除', bot_sentence_synonym_path(@bot, ss), class: 'btn btn-danger', data: { confirm: '本当に削除してよろしいですか？', method: :delete }
