Update bots/imports#new description

--- a/app/views/imports/_form.html.erb
+++ b/app/views/imports/_form.html.erb
@@ -1,8 +1,9 @@
 <%= bootstrap_form_tag url: bot_imports_path(@bot), method: :post do |f| %>
   <%#= render "shared/errors", object: @bot %>
   <p>
-    このインポート機能は、以前に登録してあるデータは更新・削除することなく、対話データを一括で追加登録する機能です。<br />
-    同様の対話データを複数回登録すると、重複したデータが登録されてしまうので、追加したい分のみ登録するようご注意ください。
+    このインポート機能は、対話データを一括で追加登録する機能です。<br />
+    以前に登録してあるデータと完全一致する質問は更新されます。<br />
+    完全一致しない場合でも以前のデータが削除されることはありません。
   </p>
 
   <%= f.file_field :file, label: 'ファイル' %>
