--- a/app/views/static_pages/help.html.slim
+++ b/app/views/static_pages/help.html.slim
@@ -9,7 +9,7 @@ ul
   li = link_to 'TIPS', 'https://esa-pages.io/p/sharing/3501/posts/148/da164283c816377c28a0.html'
 
 br
-	
+
 h2 サポート連絡先
 
 p
@@ -21,5 +21,4 @@ ul
   li 株式会社mofmof
   li 西井
   li 080-1397-5845
-  li sales@mof-mof.co.jp
-  
+  li support@mof-mof.co.jp
