bootswatchのテーマをceruleanに切り替える

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>My-ope office - 社内問い合わせ専用AIチャットボット</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= stylesheet_link_tag    'lumen', media: 'all' %>
+  <%#= stylesheet_link_tag    'lumen', media: 'all' %>
+  <%= stylesheet_link_tag    'cerulean', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
